# ProjectWorkParallelProgramming

./: .dockerignore  .gitignore  AGENTS.md  BENCHMARK_ENHANCEMENT_SUMMARY.md  BENCHMARK_USAGE.md  CMakeLists.txt  CUDA_FIXES_SUMMARY.md  CUDA_OPTIMIZATIONS_USAGE.md  Dockerfile  Dockerfile.gpu  Dockerfile.gpu129  Dockerfile.gpu130  Dockerfile.gpu25  EXPECTED_OUTPUT_AFTER_FIXES.md  GPU_OPTIMIZATIONS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  OOM_FIX_SUMMARY.md  PROFILER_FIXES_SUMMARY.md  QSVM_CUDA_Slides.pptx  README.md  bench_results_auto_float64.csv  bench_results_cuda_states_float32.csv  bench_results_numpy_float32.csv  bench_results_torch_float32.csv  benchmark.py  benchmark_complet_master.txt  benchmark_pl_kernel.py  benchmark_production.py  cvpr.sty  docker-compose.yml  examples_gpu_optimizations.py  extract_results.py  log_cuda_states_1000.txt  log_cuda_states_2500.txt  log_cuda_states_400.txt  log_cuda_states_5000.txt  log_torch_hard_1000.txt  log_torch_hard_2500.txt  log_torch_hard_400.txt  (+37 more)
benchmark/: benchmark_logger.py
benchmark_results/: benchmark.csv  benchmark_best_configs.csv  benchmark_summary.json  qubit_impact_results.csv  sample_impact_results.csv  tile_samples_impact_results.csv
configs/: cifar10.yaml  cifar10_debug.yaml  cifar10_easy.yaml  cifar10_hard.yaml  cifar10_med.yaml  config_train_qcnn_fashion.yaml  fashion.yaml  fashion_cpu.yaml  fashion_debug.yaml  fashion_easy.yaml  fashion_gpu.yaml  fashion_hard.yaml  fashion_med.yaml  fashionmnist_tiny_debug.yaml  svhn.yaml  svhn_debug.yaml  svhn_easy.yaml  svhn_gpu.yaml  svhn_hard.yaml  (+1 more)
(+67 files in other folders)
